--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* HeartAnimation.css */
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh; /* Centre verticalement */
 }
 
-.App-link {
-  color: #61dafb;
+.heart {
+  position: relative;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  background-color: #e63946;
+  animation: beat 1s infinite;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.heart:before,
+.heart:after {
+  content: '';
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background-color: #e63946;
+  border-radius: 50%;
+}
+
+.heart:before {
+  top: -50px;
+  left: 0;
+}
+
+.heart:after {
+  left: 50px;
+  top: 0;
+}
+
+@keyframes beat {
+  0%, 20%, 50%, 80%, 100% {
+      transform: scale(1);
   }
+  10% {
+      transform: scale(1.2);
+  }
+  30% {
+      transform: scale(1.1);
+  }
+}
+
+.love-text {
+  margin-top: 20px; /* Espace entre le cœur et le texte */
+  font-size: 24px; /* Taille de la police */
+  color: #e63946; /* Couleur du texte */
+  opacity: 0; /* Démarre invisible */
+  animation: fadeIn 1s forwards; /* Animation pour l'apparition */
+  animation-delay: 2s; /* Délai d'animation pour correspondre au timer */
+}
+
+@keyframes fadeIn {
   to {
-    transform: rotate(360deg);
+      opacity: 1; /* Fait apparaître le texte */
   }
 }
